# paper-reviewer

./: .gitignore  DESCRIPTION.md  LICENSE  README.md  api-key.example.md  manifest.json  profile.yaml  pyproject.toml  requirements.txt  review_template_en.md
examples/: README.md
prompts/: talent_persona.md
research_eval/: __init__.py  __main__.py  cli.py  config.py  evaluator.py  extra_tools.py  models.py  report.py  tools.py
research_eval/skills/: check_code_executes.md  check_directory_tree.md  check_log_authenticity.md  cross_check_numbers.md  desk_rejection_screen.md  extract_references.md  missing_related_work.md  verify_citation.md  verify_experiment_runs.md
skills/paper-review-workflow/: SKILL.md
skills/peer_reviewer/: SKILL.md
skills/research-eval-review/: SKILL.md
tools/: .mcp.json
tools/research-eval/: TOOL.md  backends.py  cli.py  evaluator.py  extra_tools.py  pyproject.toml  report.py  requirements.txt  review_tools.py  run.sh  server.py
vessel/: vessel.yaml
